<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/aboutToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
    android:id="@+id/texto_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/texto_app"
        android:textSize="34sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/button_1"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/NewPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/button_2"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Preferencies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/button_3"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/About"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/button_4"
            app:cornerRadius="20dp" />

    </LinearLayout>

</LinearLayout>