<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TableLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_column="1"
    android:layout_span="2"
    android:stretchColumns="1,2"
    tools:context=".NewPlayerActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/cara_sonriente_foreground" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginTop="20dp"
            android:layout_span="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/phonname" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nickame" />
    </TableRow>

    <TableRow
        android:layout_width="455dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="89dp"
            android:layout_height="47dp"
            android:layout_column="0"
            app:srcCompat="@drawable/camara_2_foreground" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_column="1"
            android:layout_span="1"
            android:background="@color/white"
            app:srcCompat="@drawable/android_1_foreground" />

        <Button
            android:id="@+id/button"
            android:layout_width="65dp"
            android:layout_height="55dp"
            android:layout_column="2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="50dp"
            android:text="@string/change"
            app:iconTint="@color/white" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            app:srcCompat="@drawable/telefono_2_foreground" />

        <EditText
            android:id="@+id/phoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/phone" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:textAlignment="textEnd" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            app:srcCompat="@drawable/email_2_foreground" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_span="2"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/email" />
    </TableRow>
</TableLayout>
</ScrollView>